Asset_Tracker/force-app/main/default/objects/Asset_Allocation__c/Asset_Allocation__c.object-meta.xml
<CustomObject>
    <label>Asset Allocation</label>
    <nameField>
        <displayFormat>AARID{000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>