Asset_Tracker/force-app/main/default/objects/Asset_Allocation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset_Information__c</referenceTo>
    <relationshipLabel>Assets Allocation</relationshipLabel>
    <relationshipName>Assets_Allocation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>