Asset_Tracker/force-app/main/default/objects/Asset_Allocation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Assets Allocation</relationshipLabel>
    <relationshipName>Assets_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>