Asset_Tracker/force-app/main/default/objects/Asset_Allocation__c/fields/Employee_Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_Reporting_Manager__c</fullName>
    <formula>Employee__r.Reporting_Manager__r.Name+&apos; &apos;+&apos;(&apos;+Employee__r.Reporting_Manager__r.Employee_ID__c+&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Reporting Manager</label>
    <type>Text</type>
</CustomField>